--- a/admin/resources/partials/user-detail.html
+++ b/admin/resources/partials/user-detail.html
@@ -24,12 +24,12 @@
                 </div>
             </div>
 
-            <div class="form-group" data-ng-hide="emailAsUsername">
+            <div class="form-group" data-ng-hide="emailAsUsername" data-ng-controller="UsernameCtrl">
                 <label class="col-md-2 control-label"for="username">{{:: 'username' | translate}} <span class="required" data-ng-show="create">*</span></label>
                 <div class="col-md-6">
                     <!-- Characters >,<,/,\ are forbidden in username -->
                     <input class="form-control" type="text" id="username" name="username" data-ng-model="user.username" autofocus
-                           data-ng-required="!emailAsUsername" ng-pattern="/^[^\<\>\\\/]*$/" data-ng-readonly="!editUsername">
+                           data-ng-required="!emailAsUsername" ng-pattern="/^[^\<\>\\\/]*$/" disabled read-only>
                 </div>
             </div>
 
@@ -43,26 +43,48 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="firstName">{{:: 'first-name' | translate}}</label>
+                <label class="col-md-2 control-label" for="firstName">{{:: 'first-name' | translate}} <span class="required" data-ng-show="create">*</span></label>
 
                 <div class="col-md-6">
                     <input class="form-control" type="text" name="firstName" id="firstName"
-                           data-ng-model="user.firstName">
+                           data-ng-model="user.firstName" required>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="lastName">{{:: 'last-name' | translate}}</label>
+                <label class="col-md-2 control-label" for="lastName">{{:: 'last-name' | translate}} <span class="required" data-ng-show="create">*</span></label>
 
                 <div class="col-md-6">
                     <input class="form-control" type="text" name="lastName" id="lastName"
-                           data-ng-model="user.lastName">
+                           data-ng-model="user.lastName" required>
                 </div>
             </div>
             
             <div class="form-group">
-                <label for="user.attributes.adherentNumber" class="col-sm-2 control-label">{{:: 'adherentNumber' | translate}}</label>
+                <label for="user.attributes.adherentNumber" class="col-sm-2 control-label">{{:: 'adherentNumber' | translate}} <span class="required" data-ng-show="create">*</span></label>
                 <div class="col-md-6">
-                    <input type="text" class="form-control" id="user.attributes.adherentNumber" name="user.attributes.adherentNumber" data-ng-model="user.attributes.numeroAdherent"/>
+                    <input type="text" class="form-control" id="user.attributes.adherentNumber" name="user.attributes.adherentNumber" data-ng-model="user.attributes.numeroAdherent" required/>
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <label for="user.attributes.postalAddress" class="col-sm-2 control-label">{{:: 'postalAddress' | translate}}</label>
+                <div class="col-md-6">
+                    <input type="text" class="form-control" id="user.attributes.postalAddress" name="user.attributes.postalAddress" data-ng-model="user.attributes.postalAddress"/>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="user.attributes.telephoneNumber" class="col-sm-2 control-label">{{:: 'telephoneNumber' | translate}}</label>
+                <div class="col-md-6">
+                    <input type="text" class="form-control" id="user.attributes.telephoneNumber" name="user.attributes.telephoneNumber" data-ng-model="user.attributes.telephoneNumber"/>
+                </div>
+            </div>
+            
+            <div class="form-group" data-ng-controller="MembershipDateCtrl">
+                <label for="membershipDate" class="col-sm-2 control-label">{{:: 'membershipDate' | translate}} <span class="required" data-ng-show="create">*</span></label>
+                <div class="col-md-6">
+                    <input type="date" class="form-control" id="membershipDate" data-ng-model="temp.membershipDate" required/>
+                    <input type="hidden" name="user.attributes.membershipDate" data-ng-model="user.attributes.membershipDate" />
                 </div>
             </div>
 
