--- a/admin/resources/partials/user-detail.html
+++ b/admin/resources/partials/user-detail.html
@@ -88,6 +88,17 @@
                 </div>
             </div>
 
+            <div class="form-group" data-ng-controller="CoAdherentCtrl">
+                <label for="coAdherent" class="col-sm-2 control-label">{{:: 'coAdherent' | translate}}</label>
+                <div class="col-md-6">
+                    <div class="input-with-addon">
+                        <input type="text" class="form-control" id="coAdherent" data-ng-model="temp.coAdherent" read-only data-ng-click="selectCoAdherent()"/>
+                        <span class="input-addon">👤</span>
+                    </div>
+                    <input type="hidden" name="user.attributes.coAdherent" data-ng-model="user.attributes.coAdherent" />
+                </div>
+            </div>
+            
             <div class="form-group clearfix block">
                 <label class="col-md-2 control-label" for="userEnabled">{{:: 'user-enabled' | translate}}</label>
                 <div class="col-md-6">
