save co-adh to the API

--- a/admin/resources/partials/user-detail.html
+++ b/admin/resources/partials/user-detail.html
@@ -92,7 +92,7 @@
                 <label for="coAdherent" class="col-sm-2 control-label">{{:: 'coAdherent' | translate}}</label>
                 <div class="col-md-6">
                     <div class="input-with-addon">
-                        <input type="text" class="form-control" id="coAdherent" data-ng-model="temp.coAdherent" read-only data-ng-click="selectCoAdherent()"/>
+                        <input type="text" class="form-control" id="coAdherent" data-ng-model="temp.name" read-only data-ng-click="selectCoAdherent()"/>
                         <span class="input-addon">👤</span>
                     </div>
                     <input type="hidden" name="user.attributes.coAdherent" data-ng-model="user.attributes.coAdherent" />
