--- a/admin/resources/partials/user-detail.html
+++ b/admin/resources/partials/user-detail.html
@@ -90,6 +90,7 @@
 
             <div class="form-group" data-ng-controller="CoAdherentCtrl">
                 <label for="coAdherent" class="col-sm-2 control-label">{{:: 'coAdherent' | translate}}</label>
+                <kc-tooltip>{{:: 'co-adhrent.tooltip' | translate}}</kc-tooltip>
                 <div class="col-md-6">
                     <div class="input-with-addon">
                         <input type="text" class="form-control" id="coAdherent" data-ng-model="temp.name" read-only data-ng-click="selectCoAdherent()"/>
