--- a/admin/resources/partials/user-detail.html
+++ b/admin/resources/partials/user-detail.html
@@ -62,7 +62,7 @@
             <div class="form-group">
                 <label for="user.attributes.adherentNumber" class="col-sm-2 control-label">{{:: 'adherentNumber' | translate}}</label>
                 <div class="col-md-6">
-                    <input type="text" class="form-control" id="user.attributes.adherentNumber" name="user.attributes.adherentNumber" data-ng-model="user.attributes.numeroAdherent" />
+                    <input type="text" class="form-control" id="user.attributes.adherentNumber" name="user.attributes.numeroAdherent" data-ng-model="user.attributes.numeroAdherent" />
                 </div>
             </div>
             
