--- a/admin/resources/partials/user-detail.html
+++ b/admin/resources/partials/user-detail.html
@@ -60,9 +60,9 @@
             </div>
             
             <div class="form-group">
-                <label for="user.attributes.adherentNumber" class="col-sm-2 control-label">{{:: 'adherentNumber' | translate}}</label>
+                <label for="user.attributes.adherentNumber" class="col-sm-2 control-label">{{:: 'adherentNumber' | translate}} <span class="required" data-ng-show="create">*</span></label>
                 <div class="col-md-6">
-                    <input type="text" class="form-control" id="user.attributes.adherentNumber" name="user.attributes.numeroAdherent" data-ng-model="user.attributes.numeroAdherent" />
+                    <input type="text" class="form-control" id="user.attributes.adherentNumber" name="user.attributes.numeroAdherent" data-ng-model="user.attributes.numeroAdherent" required />
                 </div>
             </div>
             
